# twodee

./: .gitignore  CMakeLists.txt  README.md  gen.sh
cmake/: FindGLM.cmake
twodee/: CMakeLists.txt  write_version_file.sh
twodee/app/: CMakeLists.txt  hello_triangle.cpp  main.cpp
twodee/lib/: CMakeLists.txt
twodee/lib/include/: common.h  particle_effects.h  resource.h  shader.h  system.h  twodee.h
twodee/lib/include/twodee/: common.h  gl.h  particle_effects.h  renderer.h  resource.h  shader.h  system.h  twodee.h
twodee/lib/src/: particle_effects.cpp  renderer.cpp  resource.cpp  shader.cpp  system.cpp  twodee_renderer.cpp
twodee/res/shaders/: sprite.frag.glsl  sprite.vert.glsl
